# py-loans

./: .gitignore  404.html  Makefile  README.md  index.html  loan.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs-deploy.yaml  pr.yaml
docs/: index.md
py_loans/: __init__.py  __main__.py  cli.py  loan.py  process.py  roots.py
search/: search_index.json
tests/loan/: test_find_flat_payment.py  test_illustrative_mortgage.py  test_loan.py
tests/models/: test_flat_payment.py  test_loan_period.py
tests/roots/: test_bisect.py
