[tool.poetry]
name = "mortgage"
version = "0.1.0"
description = ""
authors = ["Sam Thorold <sam.thorold@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.3"
pandas = "^2.0.3"
dash = "^2.11.1"
pydantic = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}
mypy = "^1.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
